<resources>
    <string name="app_name">Tetris</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="name_hint">Full name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password with length longer than 6</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerButton">Not registered? Signup!</string>
    <string name="loginButton">Already registered? Click here and Login!</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="empty_name">Please enter your full name!"</string>
    <string name="incorrect_name">Please enter your first and last name!"</string>
    <string name="empty_email">Please enter an email address!</string>
    <string name="incorrect_email">Please enter a correct email address!</string>
    <string name="empty_password">Please enter a password!</string>
    <string name="incorrect_password">Please enter a password with length longer than 6.</string>
    <string name="failed_authentication">Authentication failed. Please try again.</string>
    <string name="taken_email">The email address is already in use by another account.</string>
</resources>
