<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context="com.briankosw.tetris3.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="250dp"
        android:visibility="gone" >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:visibility="gone"
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/editTextColor"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginRegisterButton"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="16dp" />
        <Button
            android:id="@+id/registerButton"
            android:text="@string/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logoButton"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:src="@drawable/tetris_logo" />
</FrameLayout>
